data/derived/comb/progs/unify/prog1489.ml.out
Characters 82-83:
  ([],0)::a
          ^
Error: This expression has type 'a list * 'b
       but an expression was expected of type ('c list * int) list
